--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">     
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">     
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/title.css">
 </head>
 
 <body>
@@ -22,5 +23,6 @@
             <a id="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
+    <h1>Lucas A. de Lima</h1>
 </body>
 </html>
