--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">     
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/subtitle.css">
 </head>
 
 <body>
@@ -24,5 +25,6 @@
         </nav>
     </header>
     <h1>Lucas A. de Lima</h1>
+    <h2>Estudante de Eng. de Materiais</h2>
 </body>
 </html>
