--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
 </head>
 
 <body>
@@ -24,7 +25,11 @@
             <a id="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-    <h1>Lucas A. de Lima</h1>
-    <h2>Estudante de Eng. de Materiais</h2>
+    
+    <div id="box">
+        <h1>Lucas A. de Lima</h1>
+        <h2>Estudante de Eng. de Materiais</h2>
+    </div>
+
 </body>
 </html>
