--- a/index.html
+++ b/index.html
@@ -6,31 +6,35 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">     
-    <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/components/buttom.css">
+    <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
+    <link rel="stylesheet" href="css/components/header.css">
 </head>
 
 <body>
-    <header>
-        <img src="assets/img/eumelhor4-min6060.jpg" alt="">
+    <header class="header">
+        <img class="logo" src="assets/img/eumelhor4-min6060.jpg" alt="">
         
         <nav>
-            <a href="" lang="en">Skill</a>
-            <a href="">Projetos</a>
-            <a href="">Sobre</a>
-            <a href="">Contatos</a>
-            <a id="button" href="" lang="en">Download CV</a>
+            <a class="action" href="" lang="en">Skill</a>
+            <a class="action" href="">Projetos</a>
+            <a class="action" href="">Sobre</a>
+            <a class="action" href="">Contatos</a>
+            <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
     
-    <div id="box">
-        <h1>Lucas A. de Lima</h1>
-        <h2>Estudante de Eng. de Materiais</h2>
+    <div class="box">
+        <h1 class="title">Lucas A. de Lima</h1>
+        <h2 class="subtitle">Estudante de Eng. de Materiais</h2>
     </div>
+    <a class="button" href="" lang="en">Download CV</a>
+    <a class="button" href="">Contatos</a>
+
 
 </body>
 </html>
