Create the banner component

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/banner.css">
 </head>
 
 <body>
@@ -28,13 +29,20 @@
         </nav>
     </header>
     
-    <div class="box">
-        <h1 class="title">Lucas A. de Lima</h1>
-        <h2 class="subtitle">Estudante de Eng. de Materiais</h2>
-    </div>
-    <a class="button" href="" lang="en">Download CV</a>
-    <a class="button" href="">Contatos</a>
+    <section class="banner">
+        <div class="wrapper">
+            <div class="box">
+                <h1 class="title">Lucas A. de Lima</h1>
+                <h2 class="subtitle">Estudante de Eng. de Materiais</h2>
+            </div>
 
+            <div class="navegation">
+                <a class="button" href="" lang="en">Download CV</a>
+                <a class="button" href="">Contatos</a>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 </html>
