--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/skill.css">
+    <link rel="stylesheet" href="css/components/skill-box.css">
 </head>
 
 <body>
@@ -41,7 +43,10 @@
                 <a class="button" href="">Contatos</a>
             </div>
         </div>
+    </section>
 
+    <section class="skill">
+            <h2 class="title -second">Skill</h2>
     </section>
 
 </body>
