--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/components/buttom.css">
     <link rel="stylesheet" href="css/components/action.css">
-    <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
-    <link rel="stylesheet" href="css/components/skill.css">
-    <link rel="stylesheet" href="css/components/skill-box.css">
+    <link rel="stylesheet" href="css/components/skill-section.css">
+    <link rel="stylesheet" href="css/components/skill-tec.css">
+    <link rel="stylesheet" href="css/components/progress-bar.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
     <section class="banner">
         <div class="wrapper">
             <div class="box">
-                <h1 class="title">Lucas A. de Lima</h1>
+                <h1 class="main-title">Lucas A. de Lima</h1>
                 <h2 class="subtitle">Estudante de Eng. de Materiais</h2>
             </div>
 
@@ -45,8 +46,18 @@
         </div>
     </section>
 
-    <section class="skill">
-            <h2 class="title -second">Skill</h2>
+    <section class="skill-section">
+            <h2 class="main-title -second">Skill</h2>
+
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_html5.png" alt="Logo do HTML5 em pixel art">
+                <div class="right">
+                    <h3 class="title">HTML</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+                </div>
+            </article>
     </section>
 
 </body>
