Add Skill-section, skill-tec, wrapper-skill and card-project

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
     <link rel="stylesheet" href="css/components/skill-section.css">
+    <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
+    <link rel="stylesheet" href="css/components/card-project.css">
 </head>
 
 <body>
@@ -49,15 +51,80 @@
     <section class="skill-section">
             <h2 class="main-title -second">Skill</h2>
 
-            <article class="skill-tec">
-                <img class="icon" src="img/ico_html5.png" alt="Logo do HTML5 em pixel art">
-                <div class="right">
-                    <h3 class="title">HTML</h3>
-                    <progress class="progress-bar" max="100" value="70">
-                        70%
-                    </progress>
-                </div>
-            </article>
+            <div class="wrapper-skill">
+                <article class="skill-tec">
+                    <img class="icon" src="img/ico_html5.png" alt="Logo do HTML5 em pixel art">
+                    <div class="right">
+                        <h3 class="title">HTML</h3>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+
+                <article class="skill-tec">
+                    <img class="icon" src="img/ico_html5.png" alt="Logo do HTML5 em pixel art">
+                    <div class="right">
+                        <h3 class="title">HTML</h3>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+
+                <article class="skill-tec">
+                    <img class="icon" src="img/ico_html5.png" alt="Logo do HTML5 em pixel art">
+                    <div class="right">
+                        <h3 class="title">HTML</h3>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+
+                <article class="skill-tec">
+                    <img class="icon" src="img/ico_html5.png" alt="Logo do HTML5 em pixel art">
+                    <div class="right">
+                        <h3 class="title">HTML</h3>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+
+                <article class="skill-tec">
+                    <img class="icon" src="img/ico_html5.png" alt="Logo do HTML5 em pixel art">
+                    <div class="right">
+                        <h3 class="title">HTML</h3>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+
+                <article class="skill-tec">
+                    <img class="icon" src="img/ico_html5.png" alt="Logo do HTML5 em pixel art">
+                    <div class="right">
+                        <h3 class="title">HTML</h3>
+                        <progress class="progress-bar" max="100" value="70">
+                            70%
+                        </progress>
+                    </div>
+                </article>
+
+            </div>
+    </section>
+
+    <section>
+        <figure class="card-project">
+            <img class="logo" src="img/logo-firedlabs.png" alt="Logo da FiredLabs">
+        </figure>
+        <figure class="card-project -blue">
+            <img class="logo" src="img/logo-collabcode.png" alt="Logo da CollabCode">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/eumelhor4-min6060.jpg" alt="Minha Logo">
+        </figure>
     </section>
 
 </body>
