Add the variation in section component

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             </div>
     </section>
 
-    <section>
+    <section class="skill-section -bgBlack -bdFirst">
+        <h2 class="main-title -second">Projetos</h2>
         <figure class="card-project">
             <img class="logo" src="img/logo-firedlabs.png" alt="Logo da FiredLabs">
         </figure>
