--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/card-project.css">
+    <link rel="stylesheet" href="css/components/wrapper-card">
 </head>
 
 <body>
@@ -117,15 +118,17 @@
 
     <section class="skill-section -bgBlack -bdFirst">
         <h2 class="main-title -second">Projetos</h2>
-        <figure class="card-project">
-            <img class="logo" src="img/logo-firedlabs.png" alt="Logo da FiredLabs">
-        </figure>
-        <figure class="card-project -blue">
-            <img class="logo" src="img/logo-collabcode.png" alt="Logo da CollabCode">
-        </figure>
-        <figure class="card-project">
-            <img class="logo" src="img/eumelhor4-min6060.jpg" alt="Minha Logo">
-        </figure>
+        <div class="wrapper-card">
+            <figure class="card-project">
+                <img class="logo" src="img/logo-firedlabs.png" alt="Logo da FiredLabs">
+            </figure>
+            <figure class="card-project -blue">
+                <img class="logo" src="img/logo-collabcode.png" alt="Logo da CollabCode">
+            </figure>
+            <figure class="card-project">
+                <img class="logo" src="img/eumelhor4-min6060.jpg" alt="Minha Logo">
+            </figure>
+        </div>  
     </section>
 
 </body>
