--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/components/buttom.css">
-    <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
@@ -27,10 +27,10 @@
         <img class="logo" src="assets/img/eumelhor4-min6060.jpg" alt="">
         
         <nav>
-            <a class="action" href="" lang="en">Skill</a>
-            <a class="action" href="">Projetos</a>
-            <a class="action" href="">Sobre</a>
-            <a class="action" href="">Contatos</a>
+            <a class="main-action" href="" lang="en">Skill</a>
+            <a class="main-action" href="">Projetos</a>
+            <a class="main-action" href="">Sobre</a>
+            <a class="main-action" href="">Contatos</a>
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
