--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/header.css">
-    <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/skill-section.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/skill-tec.css">
@@ -35,7 +35,7 @@
         </nav>
     </header>
     
-    <section class="banner">
+    <section class="main-banner">
         <div class="wrapper">
             <div class="box">
                 <h1 class="main-title">Lucas A. de Lima</h1>
