--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/components/buttom.css">
+    <link rel="stylesheet" href="css/components/main-button.css">
     <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
@@ -31,7 +31,7 @@
             <a class="main-action" href="">Projetos</a>
             <a class="main-action" href="">Sobre</a>
             <a class="main-action" href="">Contatos</a>
-            <a class="button" href="" lang="en">Download CV</a>
+            <a class="main-button" href="" lang="en">Download CV</a>
         </nav>
     </header>
     
@@ -43,8 +43,8 @@
             </div>
 
             <div class="navegation">
-                <a class="button" href="" lang="en">Download CV</a>
-                <a class="button" href="">Contatos</a>
+                <a class="main-button" href="" lang="en">Download CV</a>
+                <a class="main-button" href="">Contatos</a>
             </div>
         </div>
     </section>
