--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/main-box.css">
-    <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/skill-section.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="main-header">
         <img class="logo" src="assets/img/eumelhor4-min6060.jpg" alt="">
         
         <nav>
