--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/components/main-box.css">
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
-    <link rel="stylesheet" href="css/components/skill-section.css">
+    <link rel="stylesheet" href="css/components/main-section.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-    <section class="skill-section">
+    <section class="main-section">
             <h2 class="main-title -second">Skill</h2>
 
             <div class="wrapper-skill">
@@ -116,7 +116,7 @@
             </div>
     </section>
 
-    <section class="skill-section -bgBlack -bdFirst">
+    <section class="main-section -bgBlack -bdFirst">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-card">
             <figure class="card-project">
