--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/components/main-button.css">
     <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/main-title.css">
-    <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/main-subtitle.css">
     <link rel="stylesheet" href="css/components/main-box.css">
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
@@ -39,7 +39,7 @@
         <div class="wrapper">
             <div class="main-box">
                 <h1 class="main-title">Lucas A. de Lima</h1>
-                <h2 class="subtitle">Estudante de Eng. de Materiais</h2>
+                <h2 class="main-subtitle">Estudante de Eng. de Materiais</h2>
             </div>
 
             <div class="navegation">
